--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -13,6 +13,20 @@
    year = {2009},
 }
 
+@article{Aldao2015,
+   author = {Aldao, A. and Sheppes, G. and Gross, J. J.},
+   title = {Emotion regulation flexibility},
+   journal = {Cognitive Therapy and Research},
+   volume = {39},
+   number = {3},
+   pages = {263-278},
+   ISSN = {0147-5916},
+   DOI = {10.1007/s10608-014-9662-4},
+   url = {<Go to ISI>://WOS:000354200800001
+https://link.springer.com/content/pdf/10.1007%2Fs10608-014-9662-4.pdf},
+   year = {2015},
+}
+
 @article{Bernecker2017,
    author = {Bernecker, K. and Job, V.},
    title = {Implicit Theories About Willpower in Resisting Temptations and Emotion Control},
