--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -299,6 +299,34 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/1097-4679%28199511%2951%3A
    url = {http://userpage.fu-berlin.de/~health/selfreg_g.htm},
 }
 
+@article{Sheppes2011,
+   author = {Sheppes, G. and Scheibe, S. and Suri, G. and Gross, J. J.},
+   title = {Emotion-regulation choice},
+   journal = {Psychological Science},
+   volume = {22},
+   number = {11},
+   pages = {1391-6},
+   ISSN = {1467-9280 (Electronic)
+0956-7976 (Linking)},
+   DOI = {10.1177/0956797611418350},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/21960251},
+   year = {2011},
+}
+
+@article{Sheppes2014,
+   author = {Sheppes, G. and Scheibe, S. and Suri, G. and Radu, P. and Blechert, J. and Gross, J. J.},
+   title = {Emotion regulation choice: a conceptual framework and supporting evidence},
+   journal = {Journal of Experimental Psychology: General},
+   volume = {143},
+   number = {1},
+   pages = {163-81},
+   ISSN = {1939-2222 (Electronic)
+0022-1015 (Linking)},
+   DOI = {10.1037/a0030831},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/23163767},
+   year = {2014},
+}
+
 @Article{Simmons2012,
   author  = {Simmons, J. P. and Nelson, L. D. and Simonsohn, U. A.},
   journal = {SSRN Electronic Journal},
